--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "migrate:down": "ley down"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
@@ -15,6 +18,7 @@
     "postgres": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
