--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "latest",
     "postgres": "^3.3.1",
     "react": "^18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
     "typescript": "^4.8.4"
