--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "migrate:up": "ley up",
-    "migrate:down": "ley down"
+    "migrate:down": "ley down",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -15,6 +16,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "next": "latest",
+    "patch-package": "^6.5.1",
     "postgres": "^3.3.1",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
