--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "next": "latest",
+    "next-auth": "^4.21.0",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.1",
     "react": "^18.2.0",
@@ -25,8 +26,11 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "ley": "^0.8.1",
-    "pg-connection-string": "^2.5.0"
+    "pg-connection-string": "^2.5.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
