--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.3.5",
     "next": "latest",
     "next-auth": "^4.21.0",
     "patch-package": "^6.5.1",
