--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.3.5",
+    "bcrypt": "^5.1.0",
     "next": "latest",
     "next-auth": "^4.21.0",
     "patch-package": "^6.5.1",
@@ -27,6 +28,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "ley": "^0.8.1",
