--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
@@ -25,10 +26,12 @@
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
+    "react-redux": "^8.0.5",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/react-redux": "^7.1.25",
     "autoprefixer": "^10.4.14",
     "dotenv": "^16.0.3",
     "ley": "^0.8.1",
